--- a/scipy_np_norm_multiv_fft.ipynb
+++ b/scipy_np_norm_multiv_fft.ipynb
@@ -232,6 +232,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install scipy --yes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install matplotlib --yes"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
